gcc/testsuite/rust/rustc/ui/parser/unicode-character-literal.rs
// Regression test for #88684: Improve diagnostics for combining marks
// in character literals.

//@ run-rustfix

fn main() {
    let _spade = '♠️';
// { dg-error "" "" { target *-*-* } .-1 }
// { dg-note "" "" { target *-*-* } .-2 }
// { help "" "" { target *-*-* } .-3 }

    let _s = 'ṩ̂̊';
// { dg-error "" "" { target *-*-* } .-1 }
// { dg-note "" "" { target *-*-* } .-2 }
// { help "" "" { target *-*-* } .-3 }

    let _a = 'Å';
// { dg-error "" "" { target *-*-* } .-1 }
// { dg-note "" "" { target *-*-* } .-2 }
// { help "" "" { target *-*-* } .-3 }
}

